Update secrets baseline